--- a/lsyncd.conf
+++ b/lsyncd.conf
@@ -11,8 +11,9 @@
 -- configuration parameters
 --
 settings {
-	statusFile = "/var/log/lsyncd.stat",
+	statusFile = "/space/projects/Live_Viewer/lsyncd.stat",
 	statusInterval = 1,
+    nodaemon = true
 }
 
 local formats = { jpg = true, tif = true, cbf = true, log = true }
@@ -44,12 +45,22 @@ gpfs = {
 			local extension = string.match(event.name, ".*%.([^.]+)$")
 			if formats[extension] ~= true then return end
 
-			spawn(
+			spawn (
 				event,
-				'/bin/mv',
+				'/usr/bin/python',
+                '/space/projects/Live_Viewer/wrapper_script.py',
+                '--mv_source',
 				event.sourcePath,
+                '--mv_target',
 				event.targetPathdir
 			)
+
+--			spawn(
+--				event,
+--				'/bin/mv',
+--				event.sourcePath,
+--				event.targetPathdir
+--			)
 		end
 	end,
 
@@ -71,12 +82,22 @@ gpfs = {
 			local extension = string.match(event.name, ".*%.([^.]+)$")
 			if formats[extension] ~= true then return end
 
-			spawn(
+			spawn (
 				event,
-				'/bin/mv',
+				'/usr/bin/python',
+                '/space/projects/Live_Viewer/wrapper_script.py',
+                '--mv_source',
 				event.sourcePath,
+                '--mv_target',
 				event.targetPathdir
 			)
+
+--			spawn(
+--				event,
+--				'/bin/mv',
+--				event.sourcePath,
+--				event.targetPathdir
+--			)
 		end
 	end,
 
@@ -89,8 +110,8 @@ gpfs = {
 		if not agent.isList and agent.etype == "Blanket" then
 			if exitcode == 0 then
 				log("Normal", "Startup of '",agent.source,"' finished.")
-			elseif config.exitcodes and 
-				config.exitcodes[exitcode] == "again" 
+			elseif config.exitcodes and
+				config.exitcodes[exitcode] == "again"
 			then
 				log("Normal", "Retrying startup of '",agent.source,"'.")
 				return "again"
@@ -100,7 +121,7 @@ gpfs = {
 			return
 		end
 
-		local rc = config.exitcodes and config.exitcodes[exitcode] 
+		local rc = config.exitcodes and config.exitcodes[exitcode]
 		if rc == "die" then
 			return rc
 		end
@@ -126,6 +147,6 @@ sync {
 	gpfs,
 	delay=0,
 	init=false,
-	source="/rd",
-	target="/gpfs",
+	source="/space/projects/Live_Viewer/source",
+	target="/space/projects/Live_Viewer/target",
 }
