Run lsyncd with multiple mv processes

--- a/lsyncd.conf
+++ b/lsyncd.conf
@@ -20,6 +20,8 @@ local formats = { jpg = true, tif = true, cbf = true, log = true }
 local folders = { "/local", "/current/raw", "/commissioning/raw" }
 
 gpfs = {
+    maxProcesses = 50,
+
 	onCreate = function(event)
 		-- check if in relevant subfolder
 		local location = false
