Moved the lsyncd version

--- a/src/lsyncd.conf
+++ b/src/lsyncd.conf
@@ -22,40 +22,40 @@ local folders = { "/local", "/current/raw", "/commissioning/raw" }
 gpfs = {
 --    maxProcesses = 50,
 
---	onCreate = function(event)
---		-- check if in relevant subfolder
---		local location = false
---		for i, path in ipairs(folders) do
---			if string.sub(event.path, 1, string.len(path)) == path then
---				location = true
---				break
---			end
---		end
---		if location == false then return end
---
---		if event.isdir then
---			for i, path in ipairs(folders) do
---				if path == event.pathname then return end
---			end
---			spawn(
---				event,
---				'/bin/mkdir',
---				event.targetPath
---			)
---		else
---			-- check filetype
---			local extension = string.match(event.name, ".*%.([^.]+)$")
---			if formats[extension] ~= true then return end
---
---			spawn (
---				event,
---				'/usr/bin/python',
---                '/space/projects/live-viewer/ZeroMQTunnel/wrapper_script.py',
---                '--mv_source',
---				event.sourcePath,
---                '--mv_target',
---				event.targetPathdir
---			)
+	onCreate = function(event)
+		-- check if in relevant subfolder
+		local location = false
+		for i, path in ipairs(folders) do
+			if string.sub(event.path, 1, string.len(path)) == path then
+				location = true
+				break
+			end
+		end
+		if location == false then return end
+
+		if event.isdir then
+			for i, path in ipairs(folders) do
+				if path == event.pathname then return end
+			end
+			spawn(
+				event,
+				'/bin/mkdir',
+				event.targetPath
+			)
+		else
+			-- check filetype
+			local extension = string.match(event.name, ".*%.([^.]+)$")
+			if formats[extension] ~= true then return end
+
+			spawn (
+				event,
+				'/usr/bin/python',
+                '/space/projects/live-viewer/ZeroMQTunnel/wrapper_script.py',
+                '--mv_source',
+				event.sourcePath,
+                '--mv_target',
+				event.targetPathdir
+			)
 
 --			spawn(
 --				event,
@@ -63,8 +63,8 @@ gpfs = {
 --				event.sourcePath,
 --				event.targetPathdir
 --			)
---		end
---	end,
+		end
+	end,
 
 	onModify = function(event)
 		if event.isdir then
