Changed config from sender to use ConfigParser

--- a/conf/receiverLiveViewer.conf
+++ b/conf/receiverLiveViewer.conf
@@ -18,7 +18,7 @@ senderResponseTimeout = 1000
 # path where logfile will be created
 logfilePath           = /space/projects/live-viewer/logs
 # filename used for logging
-logfileName           = zmq_receiver.log
+logfileName           = zmq_receiver_LiveViewer.log
 # size of the ring buffer for the live viewer
 maxRingBufferSize     = 10
 
