--- a/conf/receiver.conf
+++ b/conf/receiver.conf
@@ -1,12 +1,12 @@
-# where incoming data will be stored to
+# Where incoming data will be stored to
 targetDir         = /space/projects/live-viewer/data/target
 
-# local ip to connect dataStream to
+# Local IP to connect dataStream to
 dataStreamIp      = 131.169.185.121     # zitpcx19282.desy.de
-# tcp port of data pipe"
+# TCP port of data pipe
 dataStreamPort    = 6061
 
-# path where logfile will be created
+# Path where logfile will be created
 logfilePath       = /space/projects/live-viewer/logs
-# filename used for logging
+# Filename used for logging
 logfileName       = zmq_receiver.log
