--- a/conf/sender.conf
+++ b/conf/sender.conf
@@ -1,54 +1,55 @@
-# folder you want to monitor for changes
-# inside this folder only the subdirectories "commissioning", "current" and "local" are monitored
+# Folder you want to monitor for changes
+# Inside this folder only the subdirectories "commissioning", "current" and "local" are monitored
 watchFolder         = /space/projects/live-viewer/data/source/
 # Target to move the files into
 cleanerTargetPath   = /space/projects/live-viewer/data/target/
 
-# subfolders of watchFolders to be monitored
+# Subfolders of watchFolders to be monitored
 monitoredSubfolders = ["commissioning", "current", "local"]
-# the formats to be monitored, files in an other format will be be neglected
+# The formats to be monitored, files in an other format will be be neglected
 monitoredFormats    = [".tif", ".cbf"]
 
-# number of parallel data streams
+# Number of parallel data streams
 parallelDataStreams = 1
 
-# list of hosts allowed to connect to the sender
+# List of hosts allowed to connect to the sender
 receiverWhiteList   = ["zitpcx19282", "zitpcx22614", "lsdma-lab04" , "haspp11eval01" , "it-hpc-cxi04", "it-hpc-cxi03" ]
 
+# Enable ZMQ pipe into storage system (if set to false: the file is moved into the cleanerTargetPath)
 useDataStream       = True
 
-# zmq endpoint (IP-address) to send file events to
+# ZMQ endpoint (IP-address) to send file events to
 fileEventIp         = 127.0.0.1
-# zmq endpoint (port) to send file events to
+# ZMQ endpoint (port) to send file events to
 fileEventPort       = 6060
-# ip of dataStream-socket to push new files to
+# IP of dataStream-socket to push new files to
 dataStreamIp        = zitpcx19282.desy.de
-# port number of dataStream-socket to push new files to
+# Port number of dataStream-socket to push new files to
 dataStreamPort      = 6061
-# zmq-pull-socket ip which deletes/moves given files
+# ZMQ-pull-socket IP which deletes/moves given files
 cleanerIp           = 127.0.0.1
-# zmq-pull-socket port which deletes/moves given files
+# ZMQ-pull-socket port which deletes/moves given files
 cleanerPort         = 6062
-# ip receive signals from the receiver
+# IP receive signals from the receiver
 receiverComIp       = 127.0.0.1
-# port number to receive signals from the receiver
+# Port number to receive signals from the receiver
 receiverComPort     = 6080
-# ip of liveViewer-socket to send new files to
+# IP of liveViewer-socket to send new files to
 liveViewerIp        = 127.0.0.1
-# port number of liveViewer-socket to send data to
+# Port number of liveViewer-socket to send data to
 liveViewerPort      = 6070
-# ports and ips to communicate with onda/realtime analysis
-# there needs to be one entry for each workerProcess (meaning streams)
+# Ports and ips to communicate with onda/realtime analysis
+# There needs to be one entry for each workerProcess (meaning streams)
 ondaIps             = ["127.0.0.1"]
 ondaPorts           = ["6081"]
 
-# chunk size of file-parts getting send via zmq
+# Chunk size of file-parts getting send via zmq
 chunkSize           = 10485760 ; # = 1024*1024*10
 #chunkSize           = 1073741824 ; # = 1024*1024*1024
 
-# path where the logfile will be created
+# Path where the logfile will be created
 logfilePath         = /space/projects/live-viewer/logs
 
-# filename used for logging
+# Filename used for logging
 logfileName         = zmq_sender.log
 
