Fixed live viewer for multiple streams

--- a/conf/receiverLiveViewer.conf
+++ b/conf/receiverLiveViewer.conf
@@ -4,7 +4,7 @@ targetDir             = /space/projects/live-viewer/data/zmq_target
 # Local ip to connect dataStream to
 dataStreamIp          = 127.0.0.1
 # TCP port of data pipe"
-dataStreamPort        = 6070
+dataStreamPorts       = [6070]
 # Local ip to bind LiveViewer to
 liveViewerIp          = 127.0.0.1
 # TCP port of live viewer
