--- a/conf/sender.conf
+++ b/conf/sender.conf
@@ -37,7 +37,7 @@ receiverComPort     = 6080
 # IP of liveViewer-socket to send new files to
 liveViewerIp        = 127.0.0.1
 # Port number of liveViewer-socket to send data to
-liveViewerPort      = 6070
+liveViewerPorts     = ["6070"]
 # Ports and ips to communicate with onda/realtime analysis
 # There needs to be one entry for each workerProcess (meaning streams)
 ondaIps             = ["127.0.0.1"]
