--- a/conf/receiver.conf
+++ b/conf/receiver.conf
@@ -2,7 +2,7 @@
 targetDir         = /space/projects/live-viewer/data/target
 
 # Local IP to connect dataStream to
-dataStreamIp      = 131.169.185.121     # zitpcx19282.desy.de
+dataStreamIp      = 131.169.185.121     ;# zitpcx19282.desy.de
 # TCP port of data pipe
 dataStreamPort    = 6061
 
