--- a/conf/sender.conf
+++ b/conf/sender.conf
@@ -15,8 +15,8 @@ parallelDataStreams = 1
 # List of hosts allowed to connect to the sender
 receiverWhiteList   = ["zitpcx19282", "zitpcx22614", "lsdma-lab04" , "haspp11eval01" , "it-hpc-cxi04", "it-hpc-cxi03" ]
 
-# Enable ZMQ pipe into storage system (if set to false: the file is moved into the cleanerTargetPath)
-useDataStream       = True
+# Enable ZMQ pipe into storage system (if set to False: the file is moved into the cleanerTargetPath)
+useDataStream       = False
 
 # ZMQ endpoint (IP-address) to send file events to
 fileEventIp         = 127.0.0.1
