Removed old config files

--- a/conf/sender.conf
+++ b/conf/sender.conf
@@ -10,6 +10,7 @@ monitoredSubfolders = ["commissioning", "current", "local"]
 monitoredFormats    = [".tif", ".cbf"]
 
 # Number of parallel data streams
+# if this number is modifified, the port numbers also have to be adjusted
 parallelDataStreams = 1
 
 # List of hosts allowed to connect to the sender
@@ -37,9 +38,10 @@ receiverComPort     = 6080
 # IP of liveViewer-socket to send new files to
 liveViewerIp        = 127.0.0.1
 # Port number of liveViewer-socket to send data to
+# There needs to be one entry for each workerProcess (meaning stream)
 liveViewerPorts     = ["6070"]
 # Ports and ips to communicate with onda/realtime analysis
-# There needs to be one entry for each workerProcess (meaning streams)
+# There needs to be one entry for each workerProcess (meaning stream)
 ondaIps             = ["127.0.0.1"]
 ondaPorts           = ["6081"]
 
