Switched bin/connect for liveViewer liveViewer sends hostname + port to connect to

--- a/conf/receiverLiveViewer.conf
+++ b/conf/receiverLiveViewer.conf
@@ -2,9 +2,10 @@
 targetDir             = /space/projects/live-viewer/data/zmq_target
 
 # Local ip to connect dataStream to
-dataStreamIp          = 127.0.0.1
+#dataStreamIp          = 127.0.0.1
+dataStreamIp          = 0.0.0.0
 # TCP port of data pipe"
-dataStreamPorts       = [50100]
+dataStreamPort        = 50100
 # Local ip to bind LiveViewer to
 liveViewerIp          = 127.0.0.1
 # TCP port of live viewer
