Put all ports to set up ZMQ sockets into the configs

--- a/conf/sender.conf
+++ b/conf/sender.conf
@@ -31,6 +31,9 @@ dataStreamPort      = 50010
 cleanerIp           = 127.0.0.1
 # ZMQ-pull-socket port which deletes/moves given files
 cleanerPort         = 50003
+# ZMQ-router port which coordinates the load-balancing to the worker-processes
+routerPort          = 50002
+
 # IP receive signals from the receiver
 receiverComIp       = 127.0.0.1
 # Port number to receive signals from the receiver
