--- a/conf/receiverLiveViewer.conf
+++ b/conf/receiverLiveViewer.conf
@@ -1,25 +1,28 @@
 # Where incoming data will be stored to"
-targetDir             = /space/projects/live-viewer/data/zmq_target
+targetDir               = /space/projects/live-viewer/data/zmq_target
 
 # Local ip to connect dataStream to
-#dataStreamIp          = 127.0.0.1
-dataStreamIp          = 0.0.0.0
+#dataStreamIp            = 127.0.0.1
+dataStreamIp            = 0.0.0.0
 # TCP port of data pipe"
-dataStreamPort        = 50100
+dataStreamPort          = 50100
 # Local ip to bind LiveViewer to
-liveViewerIp          = 127.0.0.1
+liveViewerIp            = 127.0.0.1
 # TCP port of live viewer
-liveViewerPort        = 50020
+liveViewerPort          = 50021
+
+# Port to exchange data and signals between receiver and coordinator
+coordinatorExchangePort = 50020
 
 # Port number of dataStream-socket to send signals back to the sender
-senderComPort         = 50000
+senderComPort           = 50000
 # Time to wait for the sender to give a confirmation of the signal
-senderResponseTimeout = 1000
+senderResponseTimeout   = 1000
 
 # Path where logfile will be created
-logfilePath           = /space/projects/live-viewer/logs
+logfilePath             = /space/projects/live-viewer/logs
 # Filename used for logging
-logfileName           = zmq_receiver_LiveViewer.log
+logfileName             = zmq_receiver_LiveViewer.log
 # Size of the ring buffer for the live viewer
-maxRingBufferSize     = 10
+maxRingBufferSize       = 10
 
