Added senderComIp and Exceptions for socket-creation

--- a/conf/receiverLiveViewer.conf
+++ b/conf/receiverLiveViewer.conf
@@ -14,6 +14,8 @@ liveViewerPort          = 50021
 # Port to exchange data and signals between receiver and coordinator
 coordinatorExchangePort = 50020
 
+# IP of dataStream-socket to send signals back to the sender
+senderComIp             = lsdma-lab04.desy.de
 # Port number of dataStream-socket to send signals back to the sender
 senderComPort           = 50000
 # Time to wait for the sender to give a confirmation of the signal
