konsistent naming of receiverLiveViewer

--- a/conf/receiverLiveViewer.conf
+++ b/conf/receiverLiveViewer.conf
@@ -2,7 +2,6 @@
 targetDir               = /space/projects/live-viewer/data/zmq_target
 
 # Local ip to connect dataStream to
-#dataStreamIp            = 127.0.0.1
 dataStreamIp            = 0.0.0.0
 # TCP port of data pipe"
 dataStreamPort          = 50100
@@ -15,7 +14,7 @@ liveViewerPort          = 50021
 coordinatorExchangePort = 50020
 
 # IP of dataStream-socket to send signals back to the sender
-senderComIp             = lsdma-lab04.desy.de
+senderComIp             = zitpcx19282.desy.de
 # Port number of dataStream-socket to send signals back to the sender
 senderComPort           = 50000
 # Time to wait for the sender to give a confirmation of the signal
