Konsisten naming for folder and directory

--- a/conf/sender.conf
+++ b/conf/sender.conf
@@ -1,11 +1,11 @@
-# Folder you want to monitor for changes
-# Inside this folder only the subdirectories "commissioning", "current" and "local" are monitored
-watchFolder         = /space/projects/live-viewer/data/source/
+# Directory you want to monitor for changes
+# Inside this directory only the subdirectories "commissioning", "current" and "local" are monitored
+watchDir            = /space/projects/live-viewer/data/source/
 # Target to move the files into
 cleanerTargetPath   = /space/projects/live-viewer/data/target/
 
-# Subfolders of watchFolders to be monitored
-monitoredSubfolders = ["commissioning", "current", "local"]
+# Subdirectories of watchDir to be monitored
+monitoredSubdirs    = ["commissioning", "current", "local"]
 # The formats to be monitored, files in an other format will be be neglected
 monitoredFormats    = [".tif", ".cbf"]
 
