--- a/conf/sender.conf
+++ b/conf/sender.conf
@@ -1,8 +1,8 @@
 # Directory you want to monitor for changes
 # Inside this directory only the subdirectories "commissioning", "current" and "local" are monitored
-watchDir            = /space/projects/live-viewer/data/source/
+watchDir            = /rd_temp
 # Target to move the files into
-cleanerTargetPath   = /space/projects/live-viewer/data/target/
+cleanerTargetPath   = /gpfs/
 
 # Subdirectories of watchDir to be monitored
 monitoredSubdirs    = ["commissioning", "current", "local"]
@@ -14,7 +14,7 @@ monitoredFormats    = [".tif", ".cbf"]
 parallelDataStreams = 1
 
 # List of hosts allowed to connect to the sender
-receiverWhiteList   = ["zitpcx19282", "zitpcx22614", "lsdma-lab04" , "haspp11eval01" , "it-hpc-cxi04", "it-hpc-cxi03" ]
+receiverWhiteList   = ["haspp11eval01", "it-hpc-cxi03" ]
 
 # Enable ZMQ pipe into storage system (if set to False: the file is moved into the cleanerTargetPath)
 useDataStream       = False
@@ -40,7 +40,7 @@ receiverComIp       = 0.0.0.0
 receiverComPort     = 50000
 # Ports and ips to communicate with onda/realtime analysis
 # There needs to be one entry for each workerProcess (meaning stream)
-ondaIps             = ["127.0.0.1"]
+ondaIps             = ["0.0.0.0"]
 ondaPorts           = ["50200"]
 
 # Chunk size of file-parts getting send via zmq
@@ -48,7 +48,7 @@ chunkSize           = 10485760 ; # = 1024*1024*10
 #chunkSize           = 1073741824 ; # = 1024*1024*1024
 
 # Path where the logfile will be created
-logfilePath         = /space/projects/live-viewer/logs
+logfilePath         = /home/p11user/live-viewer/logs
 
 # Filename used for logging
 logfileName         = zmq_sender.log
