Changed to move_to trigger from InotifyDetector

--- a/conf/sender.conf
+++ b/conf/sender.conf
@@ -1,8 +1,8 @@
 # Directory you want to monitor for changes
 # Inside this directory only the subdirectories "commissioning", "current" and "local" are monitored
-watchDir            = /rd_temp
+watchDir            = /rd
 # Target to move the files into
-cleanerTargetPath   = /gpfs/
+cleanerTargetPath   = /gpfs
 
 # Subdirectories of watchDir to be monitored
 monitoredSubdirs    = ["commissioning", "current", "local"]
