Fixed bug in ring buffer clean up + added queue size to config

--- a/conf/receiverLiveViewer.conf
+++ b/conf/receiverLiveViewer.conf
@@ -26,5 +26,6 @@ logfilePath             = /space/projects/live-viewer/logs
 logfileName             = zmq_receiver_LiveViewer.log
 
 # Size of the ring buffer for the live viewer
-maxRingBufferSize       = 10
-
+maxRingBufferSize       = 2
+# Size of the queue for the live viewer
+maxQueueSize            = 2
