Added event type of monitored files to config

--- a/conf/receiverLiveViewer.conf
+++ b/conf/receiverLiveViewer.conf
@@ -1,5 +1,6 @@
 # Where incoming data will be stored to"
 targetDir               = /rd_liveviewer
+#targetDir               = /space/projects/live-viewer/data/zmq_target
 
 # Local ip to connect dataStream to
 dataStreamIp            = 0.0.0.0
@@ -16,6 +17,8 @@ coordinatorExchangePort = 50020
 
 # IP of dataStream-socket to send signals back to the sender
 senderComIp             = haspp11eval01.desy.de
+#senderComIp             = zitpcx19282.desy.de
+
 # Port number of dataStream-socket to send signals back to the sender
 senderComPort           = 50000
 # Time to wait for the sender to give a confirmation of the signal
@@ -23,11 +26,14 @@ senderResponseTimeout   = 1000
 
 # Path where logfile will be created
 logfilePath             = /home/p11user/live-viewer/logs
+#logfilePath             = /space/projects/live-viewer/logs
 # Filename used for logging
 logfileName             = zmq_receiver_LiveViewer.log
 
 # Size of the ring buffer for the live viewer
 maxRingBufferSize       = 20
+#maxRingBufferSize       = 2
 # Size of the queue for the live viewer
 maxQueueSize            = 2000
+#maxQueueSize            = 2
 
