--- a/conf/sender.conf
+++ b/conf/sender.conf
@@ -1,9 +1,13 @@
 # Directory you want to monitor for changes
 # Inside this directory only the subdirectories "commissioning", "current" and "local" are monitored
+#watchDir            = /space/projects/live-viewer/data/source
 watchDir            = /rd
 # Target to move the files into
+#cleanerTargetPath   = /space/projects/live-viewer/data/zmq_target
 cleanerTargetPath   = /gpfs
 
+# Event type of files to be monitored (options are: "IN_CLOSE_WRITE", "IN_MOVED_TO", ...)
+monitoredEventType  = IN_MOVED_TO
 # Subdirectories of watchDir to be monitored
 monitoredSubdirs    = ["commissioning", "current", "local"]
 # The formats to be monitored, files in an other format will be be neglected
@@ -14,7 +18,7 @@ monitoredFormats    = [".tif", ".cbf"]
 parallelDataStreams = 1
 
 # List of hosts allowed to connect to the sender
-receiverWhiteList   = ["haspp11eval01", "it-hpc-cxi03" ]
+receiverWhiteList   = ["zitpcx19282", "zitpcx22614", "haspp11eval01", "it-hpc-cxi03" ]
 
 # Enable ZMQ pipe into storage system (if set to False: the file is moved into the cleanerTargetPath)
 useDataStream       = False
@@ -48,6 +52,7 @@ chunkSize           = 10485760 ; # = 1024*1024*10
 #chunkSize           = 1073741824 ; # = 1024*1024*1024
 
 # Path where the logfile will be created
+#logfilePath         = /space/projects/live-viewer/logs
 logfilePath         = /home/p11user/live-viewer/logs
 
 # Filename used for logging
