--- a/conf/sender.conf
+++ b/conf/sender.conf
@@ -47,6 +47,21 @@ receiverComPort     = 50000
 ondaIps             = ["0.0.0.0"]
 ondaPorts           = ["50200"]
 
+#Put the data into a ringbuffer followed by a queue to delay the removal of the files.
+useRingbuffer       = False
+#Port number to exchange data and signals between Cleaner and LiveViewerCommunicator
+cleanerExchangePort = 50004
+#IP to bind communication to LiveViewer to
+liveViewerIp        = 0.0.0.0
+#Port number to communicate with live viewer
+liveViewerPort      = 50021
+#Size of the ring buffer for the live viewer
+maxRingBufferSize   = 20
+#maxRingBufferSize   = 2
+#Size of the queue for the live viewer
+maxQueueSize        = 2000
+#maxQueueSize        = 2
+
 # Chunk size of file-parts getting send via zmq
 chunkSize           = 10485760 ; # = 1024*1024*10
 #chunkSize           = 1073741824 ; # = 1024*1024*1024
