--- a/conf/receiverLiveViewer.conf
+++ b/conf/receiverLiveViewer.conf
@@ -12,8 +12,8 @@ liveViewerIp            = 0.0.0.0
 # TCP port of live viewer
 liveViewerPort          = 50021
 
-# Port to exchange data and signals between receiver and coordinator
-coordinatorExchangePort = 50020
+# Port to exchange data and signals between receiver and LiveViewCommunicator
+lvCommunicatorPort      = 50020
 
 # IP of dataStream-socket to send signals back to the sender
 senderComIp             = haspp11eval01.desy.de
