--- a/conf/sender.conf
+++ b/conf/sender.conf
@@ -7,6 +7,7 @@ watchDir            = /rd
 cleanerTargetPath   = /gpfs
 
 # Event type of files to be monitored (options are: "IN_CLOSE_WRITE", "IN_MOVED_TO", ...)
+#monitoredEventType  = IN_CLOSE_WRITE
 monitoredEventType  = IN_MOVED_TO
 # Subdirectories of watchDir to be monitored
 monitoredSubdirs    = ["commissioning", "current", "local"]
@@ -18,7 +19,7 @@ monitoredFormats    = [".tif", ".cbf"]
 parallelDataStreams = 1
 
 # List of hosts allowed to connect to the sender
-receiverWhiteList   = ["zitpcx19282", "zitpcx22614", "haspp11eval01", "it-hpc-cxi03" ]
+receiverWhiteList   = ["localhost", "zitpcx19282", "zitpcx22614", "haspp11eval01", "it-hpc-cxi03" ]
 
 # Enable ZMQ pipe into storage system (if set to False: the file is moved into the cleanerTargetPath)
 useDataStream       = False
@@ -56,7 +57,7 @@ maxRingBufferSize   = 20
 maxQueueSize        = 2000
 #maxQueueSize        = 2
 #Port number to exchange data and signals between Cleaner and LiveViewerCommunicator
-cleanerExchangePort = 50004
+cleanerExchangePort = 50020
 #IP to bind communication to LiveViewer to
 liveViewerIp        = 0.0.0.0
 #Port number to communicate with live viewer
