Added option for liveViewerWhiteList

--- a/conf/receiverLiveViewer.conf
+++ b/conf/receiverLiveViewer.conf
@@ -11,6 +11,8 @@ dataStreamPort          = 50100
 liveViewerIp            = 0.0.0.0
 # TCP port of live viewer
 liveViewerPort          = 50021
+# List of hosts allowed to connect to the receiver
+liveViewerWhiteList     = ["localhost", "zitpcx19282"]
 
 # Port to exchange data and signals between receiver and LiveViewCommunicator
 lvCommunicatorPort      = 50020
