--- a/conf/sender.conf
+++ b/conf/sender.conf
@@ -58,10 +58,13 @@ maxQueueSize        = 2000
 #maxQueueSize        = 2
 #Port number to exchange data and signals between Cleaner and LiveViewerCommunicator
 cleanerExchangePort = 50020
+
 #IP to bind communication to LiveViewer to
 liveViewerIp        = 0.0.0.0
 #Port number to communicate with live viewer
 liveViewerPort      = 50021
+# List of hosts allowed to connect to the receiver
+liveViewerWhiteList     = ["localhost", "zitpcx19282"]
 
 # Chunk size of file-parts getting send via zmq
 chunkSize           = 10485760 ; # = 1024*1024*10
