Added additional communication channel to liveViewer

--- a/conf/receiverLiveViewer.conf
+++ b/conf/receiverLiveViewer.conf
@@ -7,10 +7,10 @@ dataStreamIp            = 0.0.0.0
 # TCP port of data pipe"
 dataStreamPort          = 50100
 
-# Local ip to bind LiveViewer to
-liveViewerIp            = 0.0.0.0
-# TCP port of live viewer
-liveViewerPort          = 50021
+# IP to communicate with the liveViewer
+liveViewerComIp         = 0.0.0.0
+# TCP port to communicate with the live viewer
+liveViewerComPort       = 50021
 # List of hosts allowed to connect to the receiver
 liveViewerWhiteList     = ["localhost", "zitpcx19282"]
 
@@ -20,7 +20,6 @@ lvCommunicatorPort      = 50020
 # IP of dataStream-socket to send signals back to the sender
 senderComIp             = haspp11eval01.desy.de
 #senderComIp             = zitpcx19282.desy.de
-
 # Port number of dataStream-socket to send signals back to the sender
 senderComPort           = 50000
 # Time to wait for the sender to give a confirmation of the signal
