--- a/conf/sender.conf
+++ b/conf/sender.conf
@@ -60,11 +60,11 @@ maxQueueSize        = 2000
 cleanerExchangePort = 50020
 
 #IP to bind communication to LiveViewer to
-liveViewerIp        = 0.0.0.0
+liveViewerComIp     = 0.0.0.0
 #Port number to communicate with live viewer
-liveViewerPort      = 50021
+liveViewerComPort   = 50021
 # List of hosts allowed to connect to the receiver
-liveViewerWhiteList     = ["localhost", "zitpcx19282"]
+liveViewerWhiteList = ["localhost", "zitpcx19282"]
 
 # Chunk size of file-parts getting send via zmq
 chunkSize           = 10485760 ; # = 1024*1024*10
