--- a/conf/sender.conf
+++ b/conf/sender.conf
@@ -1,9 +1,11 @@
 # Directory you want to monitor for changes
 # Inside this directory only the subdirectories "commissioning", "current" and "local" are monitored
 #watchDir            = /space/projects/live-viewer/data/source
+#watchDir            = /home/kuhnm/Arbeit/live-viewer/data/source
 watchDir            = /rd
 # Target to move the files into
 #cleanerTargetPath   = /space/projects/live-viewer/data/target
+#cleanerTargetPath   = /home/kuhnm/Arbeit/live-viewer/data/target
 cleanerTargetPath   = /gpfs
 
 # Event type of files to be monitored (options are: "IN_CLOSE_WRITE", "IN_MOVED_TO", ...)
@@ -19,7 +21,7 @@ monitoredFormats    = [".tif", ".cbf"]
 parallelDataStreams = 1
 
 # List of hosts allowed to connect to the sender
-receiverWhiteList   = ["localhost", "zitpcx19282", "zitpcx22614", "haspp11eval01", "it-hpc-cxi03" ]
+receiverWhiteList   = ["localhost", "zitpcx19282", "zitpcx22614", "haspp11eval01", "it-hpc-cxi03"]
 
 # Enable ZMQ pipe into storage system (if set to False: the file is moved into the cleanerTargetPath)
 useDataStream       = False
@@ -64,15 +66,16 @@ liveViewerComIp     = 0.0.0.0
 #Port number to communicate with live viewer
 liveViewerComPort   = 50021
 # List of hosts allowed to connect to the receiver
-liveViewerWhiteList = ["localhost", "zitpcx19282"]
+liveViewerWhiteList = ["localhost", "zitpcx19282", "zitpcx22614"]
 
 # Chunk size of file-parts getting send via zmq
 chunkSize           = 10485760 ; # = 1024*1024*10
 #chunkSize           = 1073741824 ; # = 1024*1024*1024
 
 # Path where the logfile will be created
-#logfilePath         = /space/projects/live-viewer/logs
-logfilePath         = /home/p11user/live-viewer/logs
+logfilePath         = /space/projects/live-viewer/logs
+#logfilePath         = /home/kuhnm/Arbeit/live-viewer/logs
+#logfilePath         = /home/p11user/live-viewer/logs
 
 # Filename used for logging
 logfileName         = zmq_sender.log
