Changed initConnection to start inside of API

--- a/conf/receiverLiveViewer.conf
+++ b/conf/receiverLiveViewer.conf
@@ -29,7 +29,7 @@ senderResponseTimeout   = 1000
 
 # Path where logfile will be created
 logfilePath             = /home/p11user/live-viewer/logs
-#logfilePath             = /opt/live-viewer/logs
+#logfilePath             = /home/kuhnm/Arbeit/live-viewer/logs
 #logfilePath             = /space/projects/live-viewer/logs
 # Filename used for logging
 logfileName             = zmq_receiver_LiveViewer.log
