Config changes on P11

--- a/conf/sender.conf
+++ b/conf/sender.conf
@@ -21,7 +21,8 @@ monitoredFormats    = [".tif", ".cbf"]
 parallelDataStreams = 1
 
 # List of hosts allowed to connect to the sender
-receiverWhiteList   = ["localhost", "zitpcx19282", "zitpcx22614", "haspp11eval01", "it-hpc-cxi03"]
+#receiverWhiteList   = ["localhost", "zitpcx19282", "zitpcx22614", "haspp11eval01", "it-hpc-cxi03"]
+receiverWhiteList   = ["localhost", "haspp11eval01", "it-hpc-cxi03"]
 
 # Enable ZMQ pipe into storage system (if set to False: the file is moved into the cleanerTargetPath)
 useDataStream       = False
