--- a/conf/receiverLiveViewer.conf
+++ b/conf/receiverLiveViewer.conf
@@ -13,7 +13,8 @@ liveViewerComIp         = 0.0.0.0
 # TCP port to communicate with the live viewer
 liveViewerComPort       = 50021
 # List of hosts allowed to connect to the receiver
-liveViewerWhiteList     = ["localhost", "zitpcx19282", "zitpcx22614"]
+liveViewerWhiteList     = ["localhost", "haspp11user02", "haspp11user03", "haspp11user04"]
+#liveViewerWhiteList     = ["localhost", "zitpcx19282", "zitpcx22614"]
 
 # Port to exchange data and signals between receiver and LiveViewCommunicator
 lvCommunicatorPort      = 50020
@@ -38,6 +39,6 @@ logfileName             = zmq_receiver_LiveViewer.log
 maxRingBufferSize       = 20
 #maxRingBufferSize       = 2
 # Size of the queue for the live viewer
-maxQueueSize            = 2000
+maxQueueSize            = 1000
 #maxQueueSize            = 2
 
