--- a/conf/receiverLiveViewer.conf
+++ b/conf/receiverLiveViewer.conf
@@ -3,8 +3,6 @@ targetDir               = /rd_liveviewer
 #targetDir               = /home/kuhnm/Arbeit/live-viewer/data/zmq_target
 #targetDir               = /space/projects/live-viewer/data/zmq_target
 
-# Local ip to connect dataStream to
-dataStreamIp            = 0.0.0.0
 # TCP port of data pipe"
 dataStreamPort          = 50100
 
@@ -20,11 +18,9 @@ liveViewerWhiteList     = ["localhost", "haspp11user02", "haspp11user03", "haspp
 lvCommunicatorPort      = 50020
 
 # IP of dataStream-socket to send signals back to the sender
-senderComIp             = haspp11eval01.desy.de
-#senderComIp             = zitpcx19282.desy.de
-#senderComIp             = zitpcx22614.desy.de
-# Port number of dataStream-socket to send signals back to the sender
-senderComPort           = 50000
+signalIp                = haspp11eval01.desy.de
+#signalIp                = zitpcx19282.desy.de
+#signalIp                = zitpcx22614.desy.de
 # Time to wait for the sender to give a confirmation of the signal
 senderResponseTimeout   = 1000
 
