--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -1,4 +1,4 @@
-# Directory you want to monitor for changes
+# Directory to be monitor for changes
 # Inside this directory only the subdirectories "commissioning", "current" and "local" are monitored
 monitoredDir        = /space/projects/live-viewer/data/source
 #monitoredDir        = /home/kuhnm/Arbeit/live-viewer/data/source
@@ -8,6 +8,8 @@ localTarget         = /space/projects/live-viewer/data/target
 #localTarget         = /home/kuhnm/Arbeit/live-viewer/data/target
 #localTarget         = /gpfs
 
+# Type of event detector to use (options are: inotifyx)
+eventDetectorType   = inotifyx
 # Event type of files to be monitored (options are: "IN_CLOSE_WRITE", "IN_MOVED_TO", ...)
 monitoredEventType  = IN_CLOSE_WRITE
 #monitoredEventType  = IN_MOVED_TO
@@ -27,23 +29,23 @@ parallelDataStreams = 1
 # Enable ZMQ pipe into storage system (if set to False: the file is moved into the localTarget)
 useDataStream       = True
 # Fixed host to send the data to with highest priority
-fixedStreamHost      = zitpcx19282
+fixedStreamHost     = zitpcx19282
 # Fixed Port to send the data to with highest priority
-fixedStreamPort      = 6006
+fixedStreamPort     = 50100
 
 # Port number to receive signals from
 comPort             = 50000
 
 # ZMQ port to forward requests
-requestFwPort       = 50001
+requestFwPort       = 50002
 # ZMQ port to get new requests
-requestPort         = 50100
+requestPort         = 50001
 
 # ZMQ-router port which coordinates the load-balancing to the worker-processes
-routerPort          = 50002
+routerPort          = 50003
 
 # ZMQ-pull-socket port which deletes/moves given files
-cleanerPort         = 50003
+cleanerPort         = 50004
 
 # Chunk size of file-parts getting send via zmq
 chunkSize           = 10485760 ; # = 1024*1024*10
