Added watchdog option to config

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -9,7 +9,8 @@ localTarget         = /space/projects/live-viewer/data/target
 #localTarget         = /gpfs
 
 # Type of event detector to use (options are: inotifyx)
-eventDetectorType   = inotifyx
+#eventDetectorType   = inotifyx
+eventDetectorType   = watchdog
 # Event type of files to be monitored (options are: "IN_CLOSE_WRITE", "IN_MOVED_TO", ...)
 monitoredEventType  = IN_CLOSE_WRITE
 #monitoredEventType  = IN_MOVED_TO
@@ -17,6 +18,8 @@ monitoredEventType  = IN_CLOSE_WRITE
 monitoredSubdirs    = ["commissioning", "current", "local"]
 # The formats to be monitored, files in an other format will be be neglected
 monitoredFormats    = [".tif", ".cbf"]
+# Time (in seconds) since last modification after which a file will be seen as closed
+timeTillClosed      = 2
 
 # List of hosts allowed to connect
 whitelist   = ["localhost", "zitpcx19282", "zitpcx22614", "haspp11eval01", "it-hpc-cxi03"]
