Changed default log file

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -60,5 +60,5 @@ logfilePath         = /space/projects/live-viewer/logs
 #logfilePath         = /home/p11user/live-viewer/logs
 
 # Filename used for logging
-logfileName         = zmq_sender.log
+logfileName         = dataManager.log
 
