Exchanged "/" with os.sep

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -8,10 +8,10 @@ localTarget         = /space/projects/live-viewer/data/target
 #localTarget         = /home/kuhnm/Arbeit/live-viewer/data/target
 #localTarget         = /gpfs
 
-# Type of event detector to use (options are: inotifyx)
+# Type of event detector to use (options are: inotifyx, watchdog)
 #eventDetectorType   = inotifyx
 eventDetectorType   = watchdog
-# Event type of files to be monitored (options are: "IN_CLOSE_WRITE", "IN_MOVED_TO", ...)
+# Event type of files to be monitored (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...)
 monitoredEventType  = IN_CLOSE_WRITE
 #monitoredEventType  = IN_MOVED_TO
 # Subdirectories of watchDir to be monitored
