--- a/conf/receiver.conf
+++ b/conf/receiver.conf
@@ -4,9 +4,9 @@ targetDir         = /space/projects/live-viewer/data/target
 # Local IP to connect dataStream to
 dataStreamIp      = 131.169.185.121     ;# zitpcx19282.desy.de
 # TCP port of data pipe
-dataStreamPort    = 50010
+dataStreamPort    = 50100
 
 # Path where logfile will be created
 logfilePath       = /space/projects/live-viewer/logs
 # Filename used for logging
-logfileName       = zmq_receiver.log
+logfileName       = receiver.log
