Renamed config-file for receiver

--- a/conf/dataReceiver.conf
+++ b/conf/dataReceiver.conf
@@ -9,4 +9,4 @@ dataStreamPort    = 50100
 # Path where logfile will be created
 logfilePath       = /space/projects/zeromq-data-transfer/logs
 # Filename used for logging
-logfileName       = receiver.log
+logfileName       = dataReceiver.log
