Added logfile size to config

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -63,3 +63,6 @@ logfilePath         = /space/projects/zeromq-data-transfer/logs
 # Filename used for logging
 logfileName         = dataManager.log
 
+# File size before rollover in B (linux only)
+logfileSize         = 10485760 ; #100 MB
+
