--- a/conf/dataReceiver.conf
+++ b/conf/dataReceiver.conf
@@ -10,3 +10,6 @@ dataStreamPort    = 50100
 logfilePath       = /space/projects/zeromq-data-transfer/logs
 # Filename used for logging
 logfileName       = dataReceiver.log
+# File size before rollover in B (linux only)
+logfileSize         = 104857600 ; #100 MB
+
