--- a/conf/dataManager_windows.conf
+++ b/conf/dataManager_windows.conf
@@ -1,57 +1,59 @@
 # Directory to be monitor for changes
 # Inside this directory only the subdirectories "commissioning", "current" and "local" are monitored
-monitoredDir        = D:\zeromq-data-transfer\data\source
+monitoredDir       = D:\zeromq-data-transfer\data\source
 # Target to move the files into
-localTarget         = D:\zeromq-data-transfer\data\target
+localTarget        = D:\zeromq-data-transfer\data\target
 
 # Type of event detector to use (options are: inotifyx, watchdog)
-eventDetectorType   = watchdog
-# Event type of files to be monitored (options are: "IN_CLOSE_WRITE", "IN_MOVED_TO", ...)
-monitoredEventType  = IN_CLOSE_WRITE
+#eventDetectorType  = inotifyx
+eventDetectorType  = watchdog
+# Event type of files to be monitored (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...)
+monitoredEventType = IN_CLOSE_WRITE
 # Subdirectories of watchDir to be monitored
-monitoredSubdirs    = ["commissioning", "current", "local"]
+monitoredSubdirs   = ["commissioning", "current", "local"]
 # The formats to be monitored, files in an other format will be be neglected
-monitoredFormats    = [".tif", ".cbf"]
+monitoredFormats   = [".tif", ".cbf"]
 # Time (in seconds) since last modification after which a file will be seen as closed
-timeTillClosed      = 2
+timeTillClosed     = 2
 
 # List of hosts allowed to connect
-whitelist   = ["localhost", "zitpcx19282", "zitpcx22614", "zitpcx17858"]
-#whitelist   = ["localhost", "haspp11eval01", "it-hpc-cxi03"]
+whitelist          = ["localhost", "zitpcx19282", "zitpcx22614", "zitpcx17858"]
 
 # Number of parallel data streams
 # if this number is modifified, the port numbers also have to be adjusted
-parallelDataStreams = 1
+numberOfStreams    = 1
 
 # Enable ZMQ pipe into storage system (if set to False: the file is moved into the localTarget)
-useDataStream       = True
+useDataStream      = True
 # Fixed host to send the data to with highest priority
-fixedStreamHost     = zitpcx19282
-#fixedStreamHost     = zitpcx17858
+fixedStreamHost    = zitpcx19282
 # Fixed Port to send the data to with highest priority
-fixedStreamPort     = 50100
+fixedStreamPort    = 50100
 
 # Port number to receive signals from
-comPort             = 50000
+comPort            = 50000
 
 # ZMQ port to forward requests
-requestFwPort       = 50002
+requestFwPort      = 50002
 # ZMQ port to get new requests
-requestPort         = 50001
+requestPort        = 50001
 
 # ZMQ-router port which coordinates the load-balancing to the worker-processes
-routerPort          = 50003
+routerPort         = 50003
 
 # ZMQ-pull-socket port which deletes/moves given files
-cleanerPort         = 50004
+cleanerPort        = 50004
 
 # Chunk size of file-parts getting send via zmq
-chunkSize           = 10485760 ; # = 1024*1024*10
-#chunkSize           = 1073741824 ; # = 1024*1024*1024
+chunkSize          = 10485760 ; # = 1024*1024*10
+#chunkSize          = 1073741824 ; # = 1024*1024*1024
 
 # Path where the logfile will be created
-logfilePath         = D:\zeromq-data-transfer\logs
+logfilePath        = D:\zeromq-data-transfer\logs
 
 # Filename used for logging
-logfileName         = dataManager.log
+logfileName        = dataManager.log
+
+# File size before rollover in B (linux only)
+logfileSize        = 10485760 ; #10 MB
 
