--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -8,9 +8,10 @@ localTarget        = /space/projects/zeromq-data-transfer/data/target
 #localTarget       = /home/kuhnm/Arbeit/zeromq-data-transfer/data/target
 #localTarget       = /gpfs
 
-# Type of event detector to use (options are: inotifyx, watchdog)
+# Type of event detector to use (options are: inotifyx, watchdog, zmq)
 #eventDetectorType  = inotifyx
 eventDetectorType  = watchdog
+#eventDetectorType  = zmq
 # Event type of files to be monitored (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...)
 monitoredEventType = IN_CLOSE_WRITE
 #monitoredEventType  = IN_MOVED_TO
@@ -39,16 +40,19 @@ fixedStreamPort    = 50100
 # Port number to receive signals from
 comPort            = 50000
 
-# ZMQ port to forward requests
-requestFwPort      = 50002
 # ZMQ port to get new requests
 requestPort        = 50001
+# ZMQ port to forward requests
+requestFwPort      = 50002
+
+# ZMQ port to get events from (only needed if eventDetectorType is zmq)
+eventPort          = 50003
 
 # ZMQ-router port which coordinates the load-balancing to the worker-processes
-routerPort         = 50003
+routerPort         = 50004
 
 # ZMQ-pull-socket port which deletes/moves given files
-cleanerPort        = 50004
+cleanerPort        = 50005
 
 # Chunk size of file-parts getting send via zmq
 chunkSize          = 10485760 ; # = 1024*1024*10
