--- a/conf/dataManager_windows.conf
+++ b/conf/dataManager_windows.conf
@@ -4,9 +4,10 @@ monitoredDir       = D:\zeromq-data-transfer\data\source
 # Target to move the files into
 localTarget        = D:\zeromq-data-transfer\data\target
 
-# Type of event detector to use (options are: inotifyx, watchdog)
+# Type of event detector to use (options are: inotifyx, watchdog, zmq)
 #eventDetectorType  = inotifyx
 eventDetectorType  = watchdog
+#eventDetectorType  = zmq
 # Event type of files to be monitored (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...)
 monitoredEventType = IN_CLOSE_WRITE
 # Subdirectories of watchDir to be monitored
@@ -33,16 +34,19 @@ fixedStreamPort    = 50100
 # Port number to receive signals from
 comPort            = 50000
 
-# ZMQ port to forward requests
-requestFwPort      = 50002
 # ZMQ port to get new requests
 requestPort        = 50001
+# ZMQ port to forward requests
+requestFwPort      = 50002
+
+# ZMQ port to get events from (only needed if eventDetectorType is zmq)
+eventPort          = 50003
 
 # ZMQ-router port which coordinates the load-balancing to the worker-processes
-routerPort         = 50003
+routerPort         = 50004
 
 # ZMQ-pull-socket port which deletes/moves given files
-cleanerPort        = 50004
+cleanerPort        = 50005
 
 # Chunk size of file-parts getting send via zmq
 chunkSize          = 10485760 ; # = 1024*1024*10
