Added dataFetcher choice into config

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -22,6 +22,12 @@ monitoredFormats   = [".tif", ".cbf"]
 # Time (in seconds) since last modification after which a file will be seen as closed
 timeTillClosed     = 2
 
+# Module with methods specifying how to get the data (options are "getFromFile", "getFromZmq")
+dataFetcherType    = getFromFile
+# If "getFromZmq" is specified as dataFetcherType is needs a port to listen to
+dataFetcherPort    = 50010
+
+
 # List of hosts allowed to connect
 whitelist          = ["localhost", "zitpcx19282", "zitpcx22614", "haspp11eval01", "it-hpc-cxi03"]
 #whitelist          = ["localhost", "haspp11eval01", "it-hpc-cxi03"]
