Enabled eventDetector loading with modules

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -9,9 +9,9 @@ localTarget        = /space/projects/zeromq-data-transfer/data/target
 #localTarget       = /gpfs
 
 # Type of event detector to use (options are: inotifyx, watchdog, zmq)
-#eventDetectorType  = inotifyx
-eventDetectorType  = watchdog
-#eventDetectorType  = zmq
+#eventDetectorType  = InotifyxDetector
+#eventDetectorType  = WatchdogDetector
+eventDetectorType  = ZmqDetector
 # Event type of files to be monitored (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...)
 monitoredEventType = IN_CLOSE_WRITE
 #monitoredEventType  = IN_MOVED_TO
@@ -23,7 +23,8 @@ monitoredFormats   = [".tif", ".cbf"]
 timeTillClosed     = 2
 
 # Module with methods specifying how to get the data (options are "getFromFile", "getFromZmq")
-dataFetcherType    = getFromFile
+#dataFetcherType    = getFromFile
+dataFetcherType    = getFromZmq
 # If "getFromZmq" is specified as dataFetcherType is needs a port to listen to
 dataFetcherPort    = 50010
 
