Destroy context instantly

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -9,9 +9,9 @@ localTarget        = /space/projects/zeromq-data-transfer/data/target
 #localTarget       = /gpfs
 
 # Type of event detector to use (options are: inotifyx, watchdog, zmq)
-#eventDetectorType  = InotifyxDetector
+eventDetectorType  = InotifyxDetector
 #eventDetectorType  = WatchdogDetector
-eventDetectorType  = ZmqDetector
+#eventDetectorType  = ZmqDetector
 # Event type of files to be monitored (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...)
 monitoredEventType = IN_CLOSE_WRITE
 #monitoredEventType  = IN_MOVED_TO
@@ -23,14 +23,14 @@ monitoredFormats   = [".tif", ".cbf"]
 timeTillClosed     = 2
 
 # Module with methods specifying how to get the data (options are "getFromFile", "getFromZmq")
-#dataFetcherType    = getFromFile
-dataFetcherType    = getFromZmq
+dataFetcherType    = getFromFile
+#dataFetcherType    = getFromZmq
 # If "getFromZmq" is specified as dataFetcherType is needs a port to listen to
 dataFetcherPort    = 50010
 
 
 # List of hosts allowed to connect
-whitelist          = ["localhost", "zitpcx19282", "zitpcx22614", "haspp11eval01", "it-hpc-cxi03"]
+whitelist          = ["localhost", "zitpcx19282", "zitpcx22614", "lsdma-lab04", "haspp11eval01", "it-hpc-cxi03"]
 #whitelist          = ["localhost", "haspp11eval01", "it-hpc-cxi03"]
 
 # Number of parallel data streams
@@ -38,7 +38,7 @@ whitelist          = ["localhost", "zitpcx19282", "zitpcx22614", "haspp11eval01"
 numberOfStreams    = 1
 
 # Enable ZMQ pipe into storage system (if set to False: the file is moved into the localTarget)
-useDataStream      = True
+useDataStream      = False
 # Fixed host to send the data to with highest priority
 fixedStreamHost    = zitpcx19282
 # Fixed Port to send the data to with highest priority
