--- a/test/API/Makefile
+++ b/test/API/Makefile
@@ -1,2 +1,5 @@
 test: test_dataIngestAPI.cpp
-	g++ -o test_dataIngestAPI test_dataIngestAPI.cpp -lzmq -std=c++0x
+	g++ -o test_dataIngestAPI.o test_dataIngestAPI.cpp -lzmq -std=c++0x
+
+test_c: test_dataIngestAPI.c
+	gcc -o test_dataIngestAPI.o test_dataIngestAPI.c -lzmq
