Integrated http option into DataManger

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -1,69 +1,6 @@
-# Directory to be monitor for changes
-# Inside this directory only the subdirectories "commissioning", "current" and "local" are monitored
-monitoredDir       = /space/projects/zeromq-data-transfer/data/source
-#monitoredDir       = /home/kuhnm/Arbeit/zeromq-data-transfer/data/source
-#monitoredDir       = /rd
-# Target to move the files into
-localTarget        = /space/projects/zeromq-data-transfer/data/target
-#localTarget       = /home/kuhnm/Arbeit/zeromq-data-transfer/data/target
-#localTarget       = /gpfs
-
-# Type of event detector to use (options are: inotifyx, watchdog, zmq)
-eventDetectorType  = InotifyxDetector
-#eventDetectorType  = WatchdogDetector
-#eventDetectorType  = ZmqDetector
-# Event type of files to be monitored (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...)
-monitoredEventType = IN_CLOSE_WRITE
-#monitoredEventType  = IN_MOVED_TO
-# Subdirectories of watchDir to be monitored
-monitoredSubdirs   = ["commissioning", "current", "local"]
-# The formats to be monitored, files in an other format will be be neglected
-monitoredFormats   = [".tif", ".cbf"]
-# Time (in seconds) since last modification after which a file will be seen as closed
-timeTillClosed     = 2
-
-# Module with methods specifying how to get the data (options are "getFromFile", "getFromZmq")
-dataFetcherType    = getFromFile
-#dataFetcherType    = getFromZmq
-# If "getFromZmq" is specified as dataFetcherType is needs a port to listen to
-dataFetcherPort    = 50010
-
-
-# List of hosts allowed to connect
-whitelist          = ["localhost", "zitpcx19282", "zitpcx22614", "lsdma-lab04", "haspp11eval01", "it-hpc-cxi03"]
-#whitelist          = ["localhost", "haspp11eval01", "it-hpc-cxi03"]
-
-# Number of parallel data streams
-# if this number is modifified, the port numbers also have to be adjusted
-numberOfStreams    = 1
-
-# Enable ZMQ pipe into storage system (if set to False: the file is moved into the localTarget)
-useDataStream      = False
-# Fixed host to send the data to with highest priority
-fixedStreamHost    = zitpcx19282
-# Fixed Port to send the data to with highest priority
-fixedStreamPort    = 50100
-
-# Port number to receive signals from
-comPort            = 50000
-
-# ZMQ port to get new requests
-requestPort        = 50001
-# ZMQ port to forward requests
-requestFwPort      = 50002
-
-# ZMQ port to get events from (only needed if eventDetectorType is zmq)
-eventPort          = 50003
-
-# ZMQ-router port which coordinates the load-balancing to the worker-processes
-routerPort         = 50004
-
-# ZMQ-pull-socket port which deletes/moves given files
-cleanerPort        = 50005
-
-# Chunk size of file-parts getting send via zmq
-chunkSize          = 10485760 ; # = 1024*1024*10
-#chunkSize          = 1073741824 ; # = 1024*1024*1024
+#########################################
+####      Logging configuration      ####
+#########################################
 
 # Path where the logfile will be created
 logfilePath        = /space/projects/zeromq-data-transfer/logs
@@ -77,3 +14,105 @@ logfileName        = dataManager.log
 # File size before rollover in B (linux only)
 logfileSize        = 10485760 ; #10 MB
 
+
+#########################################
+####   SignalHandler Configuration   ####
+#########################################
+
+# Port number to receive signals from
+comPort            = 50000
+
+# List of hosts allowed to connect
+whitelist          = ["localhost", "zitpcx19282", "zitpcx22614", "lsdma-lab04", "haspp11eval01", "it-hpc-cxi03"]
+#whitelist          = ["localhost", "haspp11eval01", "it-hpc-cxi03"]
+
+# ZMQ port to get new requests
+requestPort        = 50001
+# ZMQ port to forward requests
+requestFwPort      = 50002
+
+
+#########################################
+####   EventDetector Configuration   ####
+#########################################
+
+# Type of event detector to use (options are: InotifyxDetector, WatchdogDetector, ZmqDetector, HttpGetDetector)
+#eventDetectorType  = InotifyxDetector
+#eventDetectorType  = WatchdogDetector
+eventDetectorType  = ZmqDetector
+#eventDetectorType  = HttpDetector
+
+# Directory to be monitor for changes
+# Inside this directory only the subdirectories "commissioning", "current" and "local" are monitored
+# (only needed if eventDetector is InotifyxDetector or WatchdogDetector)
+monitoredDir       = /space/projects/zeromq-data-transfer/data/source
+#monitoredDir       = /home/kuhnm/Arbeit/zeromq-data-transfer/data/source
+#monitoredDir       = /rd
+
+# Event type of files to be monitored (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...)
+# (only needed if eventDetector is InotifyxDetector or WatchdogDetector)
+monitoredEventType = IN_CLOSE_WRITE
+#monitoredEventType  = IN_MOVED_TO
+# Subdirectories of watchDir to be monitored
+# (only needed if eventDetector is InotifyxDetector or WatchdogDetector)
+monitoredSubdirs   = ["commissioning", "current", "local"]
+# The formats to be monitored, files in an other format will be be neglected
+# (only needed if eventDetector is InotifyxDetector or WatchdogDetector)
+monitoredFormats   = [".tif", ".cbf"]
+
+# Time (in seconds) since last modification after which a file will be seen as closed
+# (only needed if eventDetector is WatchdogDetector)
+timeTillClosed     = 2
+
+# ZMQ port to get events from (only needed if eventDetectorType is ZmqDetector)
+eventPort          = 50003
+
+# Supply a scan prefix. Otherwise the prefix is read from the tango server.
+# (only needed if eventDetectorType is HttpDetector)
+prefix             = None
+# Tango device proxy for the detector
+# (only needed if eventDetectorType is HttpDetector)
+detectorDevice     = "haspp10lab:10000/p10/eigerdectris/lab.01"
+# Tango device proxy for the filewriter
+# (only needed if eventDetectorType is HttpDetector)
+filewriterDevice   = "haspp10lab:10000/p10/eigerfilewriter/lab.01"
+
+
+#########################################
+####    DataFetcher Configuration    ####
+#########################################
+
+# Module with methods specifying how to get the data (options are "getFromFile", "getFromZmq")
+dataFetcherType    = getFromFile
+#dataFetcherType    = getFromZmq
+#dataFetcherType    = getFromHttp
+
+# If "getFromZmq" is specified as dataFetcherType it needs a port to listen to
+dataFetcherPort    = 50010
+
+
+# Number of parallel data streams
+# if this number is modifified, the port numbers also have to be adjusted
+numberOfStreams    = 1
+
+# Enable ZMQ pipe into storage system (if set to False: the file is moved into the localTarget)
+useDataStream      = False
+# Fixed host to send the data to with highest priority
+fixedStreamHost    = zitpcx19282
+# Fixed Port to send the data to with highest priority
+fixedStreamPort    = 50100
+
+# Chunk size of file-parts getting send via zmq
+chunkSize          = 10485760 ; # = 1024*1024*10
+#chunkSize          = 1073741824 ; # = 1024*1024*1024
+
+# ZMQ-router port which coordinates the load-balancing to the worker-processes
+routerPort         = 50004
+
+# Target to move the files into
+localTarget        = /space/projects/zeromq-data-transfer/data/target
+#localTarget       = /home/kuhnm/Arbeit/zeromq-data-transfer/data/target
+#localTarget       = /gpfs
+
+# ZMQ-pull-socket port which deletes/moves given files
+cleanerPort        = 50005
