Fixed and tested http option

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -37,9 +37,9 @@ requestFwPort      = 50002
 #########################################
 
 # Type of event detector to use (options are: InotifyxDetector, WatchdogDetector, ZmqDetector, HttpGetDetector)
-#eventDetectorType  = InotifyxDetector
+eventDetectorType  = InotifyxDetector
 #eventDetectorType  = WatchdogDetector
-eventDetectorType  = ZmqDetector
+#eventDetectorType  = ZmqDetector
 #eventDetectorType  = HttpDetector
 
 # Directory to be monitor for changes
@@ -69,20 +69,22 @@ eventPort          = 50003
 
 # Supply a scan prefix. Otherwise the prefix is read from the tango server.
 # (only needed if eventDetectorType is HttpDetector)
-prefix             = None
+prefix             = ""
 # Tango device proxy for the detector
 # (only needed if eventDetectorType is HttpDetector)
-detectorDevice     = "haspp10lab:10000/p10/eigerdectris/lab.01"
+#detectorDevice     = "haspp10lab:10000/p10/eigerdectris/lab.01"
+detectorDevice     = haspp06:10000/p06/eigerdectris/exp.01
 # Tango device proxy for the filewriter
 # (only needed if eventDetectorType is HttpDetector)
-filewriterDevice   = "haspp10lab:10000/p10/eigerfilewriter/lab.01"
+#filewriterDevice   = "haspp10lab:10000/p10/eigerfilewriter/lab.01"
+filewriterDevice   = haspp06:10000/p06/eigerfilewriter/exp.01
 
 
 #########################################
 ####    DataFetcher Configuration    ####
 #########################################
 
-# Module with methods specifying how to get the data (options are "getFromFile", "getFromZmq")
+# Module with methods specifying how to get the data (options are "getFromFile", "getFromZmq", "getFromHttp")
 dataFetcherType    = getFromFile
 #dataFetcherType    = getFromZmq
 #dataFetcherType    = getFromHttp
