Added control channel and fixed some termination bugs

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -31,6 +31,8 @@ requestPort        = 50001
 # ZMQ port to forward requests
 requestFwPort      = 50002
 
+# ZMQ port to disribute control signals
+controlPort        = 50005
 
 #########################################
 ####   EventDetector Configuration   ####
@@ -115,6 +117,3 @@ routerPort         = 50004
 localTarget        = /space/projects/zeromq-data-transfer/data/target
 #localTarget       = /home/kuhnm/Arbeit/zeromq-data-transfer/data/target
 #localTarget       = /gpfs
-
-# ZMQ-pull-socket port which deletes/moves given files
-cleanerPort        = 50005
