fixSubdirs are not created inside of localTarget

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -44,6 +44,10 @@ eventDetectorType  = InotifyxDetector
 #eventDetectorType  = ZmqDetector
 #eventDetectorType  = HttpDetector
 
+# Subdirectories to be monitored and to store data to
+# (only needed if eventDetector is InotifyxDetector or WatchdogDetector or dataFetchter is getFromFile)
+fixSubdirs         = ["commissioning", "current", "local"]
+
 # Directory to be monitor for changes
 # Inside this directory only the subdirectories "commissioning", "current" and "local" are monitored
 # (only needed if eventDetector is InotifyxDetector or WatchdogDetector)
@@ -55,9 +59,6 @@ monitoredDir       = /space/projects/zeromq-data-transfer/data/source
 # (only needed if eventDetector is InotifyxDetector or WatchdogDetector)
 monitoredEventType = IN_CLOSE_WRITE
 #monitoredEventType  = IN_MOVED_TO
-# Subdirectories of watchDir to be monitored
-# (only needed if eventDetector is InotifyxDetector or WatchdogDetector)
-monitoredSubdirs   = ["commissioning", "current", "local"]
 # The formats to be monitored, files in an other format will be be neglected
 # (only needed if eventDetector is InotifyxDetector or WatchdogDetector)
 monitoredFormats   = [".tif", ".cbf"]
@@ -117,3 +118,11 @@ routerPort         = 50004
 localTarget        = /space/projects/zeromq-data-transfer/data/target
 #localTarget       = /home/kuhnm/Arbeit/zeromq-data-transfer/data/target
 #localTarget       = /gpfs
+
+# Flag describing if the data should be stored in localTarget
+# (needed if dataFetcherType is getFromFile or getFromHttp)
+storeFlag          = True
+
+# Flag describing if the files should be removed from the source
+# (needed if dataFetcherType is getFromHttp)
+removeFlag         = True
