HttpDetector uses deque instead of array

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -64,7 +64,7 @@ monitoredEventType = IN_CLOSE_WRITE
 monitoredFormats   = [".tif", ".cbf"]
 
 # Number of events stored to look for doubles
-# (needed if eventDetector is InotifyxDetector)
+# (needed if eventDetector is InotifyxDetector or HttpDetector)
 historySize        = 0
 
 # Time (in seconds) since last modification after which a file will be seen as closed
