sending control signals moved from TaskProvider to SignalHandler

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -1,5 +1,5 @@
 #########################################
-####      Logging configuration      ####
+####      Logging Configuration      ####
 #########################################
 
 # Path where the logfile will be created
