Renamed remove and store parameters in config

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -125,8 +125,8 @@ localTarget        = /space/projects/zeromq-data-transfer/data/target
 
 # Flag describing if the data should be stored in localTarget
 # (needed if dataFetcherType is getFromFile or getFromHttp)
-storeFlag          = True
+storeData          = True
 
 # Flag describing if the files should be removed from the source
 # (needed if dataFetcherType is getFromHttp)
-removeFlag         = True
+removeData         = True
