Check if commi, current local exit in localTarget

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -104,7 +104,7 @@ dataFetcherPort    = 50010
 # if this number is modifified, the port numbers also have to be adjusted
 numberOfStreams    = 1
 
-# Enable ZMQ pipe into storage system (if set to False: the file is moved into the localTarget)
+# Enable ZMQ pipe into storage system (uses the fixedStreamHost and fixedStreamPort)
 useDataStream      = False
 # Fixed host to send the data to with highest priority
 fixedStreamHost    = zitpcx19282
