--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -28,10 +28,13 @@ whitelist          = ["localhost", "zitpcx19282", "zitpcx22614", "lsdma-lab04", 
 
 # ZMQ port to get new requests
 requestPort        = 50001
+
 # ZMQ port to forward requests
+# (needed if running on Windows)
 requestFwPort      = 50002
 
 # ZMQ port to disribute control signals
+# (needed if running on Windows)
 controlPort        = 50005
 
 #########################################
@@ -71,7 +74,8 @@ historySize        = 0
 # (needed if eventDetector is WatchdogDetector)
 timeTillClosed     = 2
 
-# ZMQ port to get events from (only needed if eventDetectorType is ZmqDetector)
+# ZMQ port to get events from
+# (needed if eventDetectorType is ZmqDetector)
 eventPort          = 50003
 
 # Tango device proxy for the detector
@@ -94,8 +98,8 @@ dataFetcherType    = getFromFile
 #dataFetcherType    = getFromHttp
 
 # If "getFromZmq" is specified as dataFetcherType it needs a port to listen to
+# (needed if eventDetectorType is ZmqDetector)
 dataFetcherPort    = 50010
-
 
 # Number of parallel data streams
 # if this number is modifified, the port numbers also have to be adjusted
@@ -113,6 +117,7 @@ chunkSize          = 10485760 ; # = 1024*1024*10
 #chunkSize          = 1073741824 ; # = 1024*1024*1024
 
 # ZMQ-router port which coordinates the load-balancing to the worker-processes
+# (needed if running on Windows)
 routerPort         = 50004
 
 # Target to move the files into
