Added control pub and sub ports to config

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -35,7 +35,8 @@ requestFwPort      = 50002
 
 # ZMQ port to disribute control signals
 # (needed if running on Windows)
-controlPort        = 50005
+controlPubPort     = 50005
+controlSubPort     = 50006
 
 #########################################
 ####   EventDetector Configuration   ####
