--- a/conf/dataReceiver.conf
+++ b/conf/dataReceiver.conf
@@ -1,15 +1,32 @@
+#########################################
+####      Logging Configuration      ####
+#########################################
+
+# Path where logfile will be created
+logfilePath       = /space/projects/zeromq-data-transfer/logs
+
+# Filename used for logging
+logfileName       = dataReceiver.log
+
+# File size before rollover in B (linux only)
+logfileSize       = 104857600 ; #100 MB
+
+#########################################
+####   DataReceiver Configuration   ####
+#########################################
+#
+# List of hosts allowed to receive data from
+
+whitelist         = "131.169.185.121"
+#whitelist         = "localhost" "zitpcx19282.desy.de" "zitpcx22614" "lsdma-lab04"
+
 # Where incoming data will be stored to
 targetDir         = /space/projects/zeromq-data-transfer/data/zmq_target
 
 # Local IP to connect dataStream to
 dataStreamIp      = 131.169.185.121     ;# zitpcx19282.desy.de
+
 # TCP port of data pipe
 dataStreamPort    = 50100
 
-# Path where logfile will be created
-logfilePath       = /space/projects/zeromq-data-transfer/logs
-# Filename used for logging
-logfileName       = dataReceiver.log
-# File size before rollover in B (linux only)
-logfileSize         = 104857600 ; #100 MB
 
