--- a/conf/dataReceiver.conf
+++ b/conf/dataReceiver.conf
@@ -17,8 +17,7 @@ logfileSize       = 104857600 ; #100 MB
 #
 # List of hosts allowed to receive data from
 
-whitelist         = "131.169.185.121"
-#whitelist         = "localhost" "zitpcx19282.desy.de" "zitpcx22614" "lsdma-lab04"
+whitelist         = ["localhost", "zitpcx19282.desy.de", "zitpcx22614", "lsdma-lab04"]
 
 # Where incoming data will be stored to
 targetDir         = /space/projects/zeromq-data-transfer/data/zmq_target
