--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -14,6 +14,8 @@ logfileName        = dataManager.log
 # File size before rollover in B (linux only)
 logfileSize        = 10485760 ; #10 MB
 
+# Name with which the service should be running
+procname           = zeromq-data-transfer
 
 #########################################
 ####   SignalHandler Configuration   ####
@@ -49,7 +51,7 @@ eventDetectorType  = InotifyxDetector
 #eventDetectorType  = HttpDetector
 
 # Subdirectories to be monitored and to store data to
-# (needed if eventDetector is InotifyxDetector or WatchdogDetector or dataFetchter is getFromFile)
+# (needed if eventDetector is InotifyxDetector or WatchdogDetector or dataFetcher is getFromFile)
 fixSubdirs         = ["commissioning", "current", "local"]
 
 # Directory to be monitor for changes
