Added ldapsearch for whitelist of receiver

--- a/conf/dataReceiver.conf
+++ b/conf/dataReceiver.conf
@@ -17,6 +17,7 @@ logfileSize       = 104857600 ; #100 MB
 #
 # List of hosts allowed to receive data from
 
+#whitelist         = a3p02.1-hosts
 whitelist         = ["localhost", "zitpcx19282.desy.de", "zitpcx22614", "lsdma-lab04"]
 
 # Where incoming data will be stored to
