Added option to enable clean up thread

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -73,6 +73,11 @@ monitoredFormats   = [".tif", ".cbf"]
 # (needed if eventDetector is InotifyxDetector or HttpDetector)
 historySize        = 0
 
+# Flag describing if a clean up thread which regularly checks
+# if some files were missed should be activated
+# (needed if eventDetector is InotifyxDetector)
+useCleanUp         = False
+
 # Time (in seconds) since last modification after which a file will be seen as closed
 # (needed if eventDetector is WatchdogDetector)
 timeTillClosed     = 2
