enabled clean up

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -76,7 +76,7 @@ historySize        = 0
 # Flag describing if a clean up thread which regularly checks
 # if some files were missed should be activated
 # (needed if eventDetector is InotifyxDetector)
-useCleanUp         = False
+useCleanUp         = True
 
 # Time (in seconds) since last modification after which a file will be seen as closed
 # (needed if eventDetector is WatchdogDetector)
