Added option to let file stay without copying (getFromFile)

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -138,5 +138,5 @@ localTarget        = /space/projects/zeromq-data-transfer/data/target
 storeData          = True
 
 # Flag describing if the files should be removed from the source
-# (needed if dataFetcherType is getFromHttp)
+# (needed if dataFetcherType is getFromFile or getFromHttp)
 removeData         = True
