--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -3,8 +3,8 @@
 #########################################
 
 # Path where the logfile will be created
-logfilePath        = /space/projects/zeromq-data-transfer/logs
-#logfilePath        = /home/kuhnm/Arbeit/zeromq-data-transfer/logs
+#logfilePath        = /space/projects/zeromq-data-transfer/logs
+logfilePath        = /home/kuhnm/Arbeit/zeromq-data-transfer/logs
 #logfilePath        = /home/p11user/zeromq-data-transfer/logs
 #logfilePath        = /home/p11user/live-viewer/logs
 
@@ -25,7 +25,7 @@ procname           = zeromq-data-transfer
 comPort            = 50000
 
 # List of hosts allowed to connect
-whitelist          = ["localhost", "zitpcx19282", "zitpcx22614", "lsdma-lab04", "haspp11eval01", "it-hpc-cxi03"]
+whitelist          = ["localhost", "zitpcx19282", "zitpcx22614", "zitpcx22614w", "zitpcx22614.fritz.box", "lsdma-lab04", "haspp11eval01", "it-hpc-cxi03", "max-cfel015"]
 #whitelist          = ["localhost", "haspp11eval01", "it-hpc-cxi03"]
 
 # ZMQ port to get new requests
@@ -57,8 +57,8 @@ fixSubdirs         = ["commissioning", "current", "local"]
 # Directory to be monitor for changes
 # Inside this directory only the subdirectories "commissioning", "current" and "local" are monitored
 # (needed if eventDetector is InotifyxDetector or WatchdogDetector)
-monitoredDir       = /space/projects/zeromq-data-transfer/data/source
-#monitoredDir       = /home/kuhnm/Arbeit/zeromq-data-transfer/data/source
+#monitoredDir       = /space/projects/zeromq-data-transfer/data/source
+monitoredDir       = /home/kuhnm/Arbeit/zeromq-data-transfer/data/source
 #monitoredDir       = /rd
 
 # Event type of files to be monitored (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...)
@@ -76,7 +76,7 @@ historySize        = 0
 # Flag describing if a clean up thread which regularly checks
 # if some files were missed should be activated
 # (needed if eventDetector is InotifyxDetector)
-useCleanUp         = True
+useCleanUp         = False
 
 # Time (in seconds) since last modification after which a file will be seen as closed
 # (needed if eventDetector is WatchdogDetector)
@@ -129,8 +129,8 @@ chunkSize          = 10485760 ; # = 1024*1024*10
 routerPort         = 50004
 
 # Target to move the files into
-localTarget        = /space/projects/zeromq-data-transfer/data/target
-#localTarget       = /home/kuhnm/Arbeit/zeromq-data-transfer/data/target
+#localTarget        = /space/projects/zeromq-data-transfer/data/target
+localTarget       = /home/kuhnm/Arbeit/zeromq-data-transfer/data/target
 #localTarget       = /gpfs
 
 # Flag describing if the data should be stored in localTarget
