--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -3,10 +3,9 @@
 #########################################
 
 # Path where the logfile will be created
-#logfilePath        = /space/projects/zeromq-data-transfer/logs
-logfilePath        = /home/kuhnm/Arbeit/zeromq-data-transfer/logs
+logfilePath        = /space/projects/zeromq-data-transfer/logs
+#logfilePath        = /home/kuhnm/Arbeit/zeromq-data-transfer/logs
 #logfilePath        = /home/p11user/zeromq-data-transfer/logs
-#logfilePath        = /home/p11user/live-viewer/logs
 
 # Filename used for logging
 logfileName        = dataManager.log
@@ -57,12 +56,13 @@ fixSubdirs         = ["commissioning", "current", "local"]
 # Directory to be monitor for changes
 # Inside this directory only the subdirectories "commissioning", "current" and "local" are monitored
 # (needed if eventDetector is InotifyxDetector or WatchdogDetector)
-#monitoredDir       = /space/projects/zeromq-data-transfer/data/source
-monitoredDir       = /home/kuhnm/Arbeit/zeromq-data-transfer/data/source
+monitoredDir       = /space/projects/zeromq-data-transfer/data/source
+#monitoredDir       = /home/kuhnm/Arbeit/zeromq-data-transfer/data/source
 #monitoredDir       = /rd
 
 # Event type of files to be monitored (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...)
 # (needed if eventDetector is InotifyxDetector or WatchdogDetector)
+#monitoredEventType = SOME_STUPID_EVENT
 monitoredEventType = IN_CLOSE_WRITE
 #monitoredEventType  = IN_MOVED_TO
 # The formats to be monitored, files in an other format will be be neglected
@@ -77,9 +77,12 @@ historySize        = 0
 # if some files were missed should be activated
 # (needed if eventDetector is InotifyxDetector)
 useCleanUp         = False
+# "Intervall time (in seconds) used for clean up
+# (only needed if eventDetectorType is InotifyxDetector
+actionTime         = 150
 
 # Time (in seconds) since last modification after which a file will be seen as closed
-# (needed if eventDetector is WatchdogDetector)
+# (needed if eventDetector is InotifyxDetector (for clean up) or WatchdogDetector)
 timeTillClosed     = 2
 
 # ZMQ port to get events from
@@ -129,8 +132,8 @@ chunkSize          = 10485760 ; # = 1024*1024*10
 routerPort         = 50004
 
 # Target to move the files into
-#localTarget        = /space/projects/zeromq-data-transfer/data/target
-localTarget       = /home/kuhnm/Arbeit/zeromq-data-transfer/data/target
+localTarget        = /space/projects/zeromq-data-transfer/data/target
+#localTarget       = /home/kuhnm/Arbeit/zeromq-data-transfer/data/target
 #localTarget       = /gpfs
 
 # Flag describing if the data should be stored in localTarget
